=== (in git)

* Enhancements:
  * Upgraded DevKit mintty to version 1.0.3
  * Add mingw-32-4.6.2 toolchain support
  * Upgraded OpenSSL to version 1.0.0f
  * Upgraded DevKit MSYS libiconv (1.14-1) and libintl (0.18.1.1-1)
  * Upgraded RubyGems to 1.8.15 on all versions of Ruby
  * Upgraded DevKit binutils to version 2.22
  * Upgraded DevKit gdb (and deps) to version 7.3.1

=== 2011-12-28

* Enhancements:
  * Upgraded Ruby 1.8.7 to patchlevel 357
  * Add mingw64-32-4.6.3 toolchain support (ruben's 4.6.3-1 build)
  * Upgraded rb-readline to version 0.4.2
  * Upgraded Tcl/Tk to version 8.5.11
  * Upgraded RubyGems to 1.8.12 on all versions of Ruby
  * Upgraded DevKit mintty to version 1.0.2

=== 2011-10-31

* Enhancements:
  * Add Ruby 1.9.3-p0 as default for `ruby19` task
  * Upgraded rb-readline to version 0.4.1
  * Upgraded DevKit mintty to version 1.0.1
  * Upgraded DevKit binutils to version 2.21.53
  * Upgraded DevKit gdb to version 7.3-2
  * Upgraded libffi to version 3.0.10
  * Upgraded DevKit mingwrt to 3.20
  * Upgraded OpenSSL to version 1.0.0e
  * Add GnuWin32 which.exe to relevant DevKit's
  * Add tdm-32-4.6.1 toolchain support
  * Add mingw-32-4.6.1 toolchain support
  * Remove tdm-32-4.5.1, tdm-32-4.5.0, and tdm-64-4.5.1 toolchain support

* Bugfixes:
  * Correct DevKit install path search behavior. GH-80
  * Avoid forcing users to clone with autocrlf=false. GH-71, GH-78 and GH-84
  * Correct extraction of SHA1 based tarballs
  * No longer leak LDFLAGS into sandboxed rbconfig.rb. GH-85

=== 2011-07-15

* Enhancements:
  * Upgraded Ruby 1.9.2 to patchlevel 290
  * Upgraded libyaml to 0.1.4 in Ruby 1.9

=== 2011-07-12

* Enhancements:
  * Upgraded Ruby 1.9.2 to patchlevel 180
  * Upgraded Ruby 1.8.7 to patchlevel 352
  * Upgraded RubyGems to 1.7.2 on all versions of Ruby
  * Upgraded rb-readline to version 0.4.0
  * Upgraded OpenSSL to 1.0.0d on all versions of Ruby
  * Build Ruby using GCC 4.5.2 (TDM-1 release)